k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  labels:
    app: paless
    component: web
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: paless
    component: web
