k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paless-web
  labels:
    app: paless
    component: web
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: paless
    component: web
